--- a/unit/tsconfig.json
+++ b/unit/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig.base.json",
   "include": [
-    "./**/*.test.ts",
-    "../src/**/*.ts"
+    "./**/*.test.ts"
   ],
   "compilerOptions": {
     "types": ["vitest/globals", "chai"],
