--- a/apps/jaculus-tools/package.json
+++ b/apps/jaculus-tools/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "jaculus-tools",
-  "version": "0.0.26",
-  "description": "Companion CLI for Jaculus",
-  "license": "GPL-3.0-only",
-  "type": "module",
-  "private": false,
-  "bin": { "jac": "dist/src/cli.js" },
-  "main": "dist/src/cli.js",
-  "module": "dist/src/cli.js",
-  "types": "dist/src/cli.d.ts",
-  "scripts": {
-    "prebuild": "node -p \"'export const version = ' + JSON.stringify(require('./package.json').version) + ';'\" > src-appmeta/version.ts",
-    "build": "tsc -b",
-    "dev": "tsc -b --watch",
-    "clean": "rimraf dist tsconfig.tsbuildinfo",
-    "lint": "eslint --ext .ts src"
-  },
-  "dependencies": {
-    "@jaculus/commands": "workspace:*",
-    "@jaculus/device": "workspace:*",
-    "@jaculus/util": "workspace:*",
-    "chalk": "^5.4.1",
-    "typescript": "^5.8.3"
-  },
-  "devDependencies": {
-    "@types/node": "^24.0.7",
-    "eslint": "^9.30.0",
-    "rimraf": "^6.0.1",
-    "typescript-eslint": "^8.35.0"
-  }
+    "name": "jaculus-tools",
+    "version": "0.0.26",
+    "description": "Companion CLI for Jaculus",
+    "license": "GPL-3.0-only",
+    "type": "module",
+    "private": false,
+    "bin": {
+        "jac": "dist/src/cli.js"
+    },
+    "main": "dist/src/cli.js",
+    "module": "dist/src/cli.js",
+    "types": "dist/src/cli.d.ts",
+    "scripts": {
+        "prebuild": "node -p \"'export const version = ' + JSON.stringify(require('./package.json').version) + ';'\" > src-appmeta/version.ts",
+        "build": "tsc -b",
+        "dev": "tsc -b --watch",
+        "clean": "rimraf dist tsconfig.tsbuildinfo",
+        "lint": "eslint --ext .ts src"
+    },
+    "dependencies": {
+        "@jaculus/commands": "workspace:*",
+        "@jaculus/device": "workspace:*",
+        "@jaculus/util": "workspace:*",
+        "chalk": "^5.4.1"
+    },
+    "devDependencies": {
+        "typescript": "^5.8.3",
+        "@types/node": "^24.0.7",
+        "eslint": "^9.30.0",
+        "rimraf": "^6.0.1",
+        "typescript-eslint": "^8.35.0"
+    }
 }
