--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,22 +1,33 @@
 {
-  "name": "@jaculus/util",
-  "version": "0.0.1",
-  "type": "module",
-  "private": false,
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
-  "files": ["dist"],
-  "exports": {
-    ".": { "types": "./dist/src/index.d.ts", "default": "./dist/src/index.js" },
-    "./logger.js": "./dist/src/logger.js",
-    "./encoding.js": "./dist/src/encoding.js",
-    "./timeoutPromise.js": "./dist/src/timeoutPromise.js"
-  },
-  "scripts": {
-    "build": "tsc -b",
-    "clean": "rimraf dist tsconfig.tsbuildinfo",
-    "lint": "eslint --ext .ts src"
-  },
-  "dependencies": { "winston": "^3.17.0", "typescript": "^5.8.3" },
-  "devDependencies": { "@types/node": "^24.0.7", "rimraf": "^6.0.1" }
+    "name": "@jaculus/util",
+    "version": "0.0.1",
+    "type": "module",
+    "private": false,
+    "main": "dist/src/index.js",
+    "types": "dist/src/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "exports": {
+        ".": {
+            "types": "./dist/src/index.d.ts",
+            "default": "./dist/src/index.js"
+        },
+        "./logger.js": "./dist/src/logger.js",
+        "./encoding.js": "./dist/src/encoding.js",
+        "./timeoutPromise.js": "./dist/src/timeoutPromise.js"
+    },
+    "scripts": {
+        "build": "tsc -b",
+        "clean": "rimraf dist tsconfig.tsbuildinfo",
+        "lint": "eslint --ext .ts src"
+    },
+    "dependencies": {
+        "winston": "^3.17.0",
+        "typescript": "^5.8.3"
+    },
+    "devDependencies": {
+        "@types/node": "^24.0.7",
+        "rimraf": "^6.0.1"
+    }
 }
