--- a/packages/device/tsconfig.json
+++ b/packages/device/tsconfig.json
@@ -1,13 +1,10 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "composite": true
-  },
-  "references": [
-    { "path": "../link" },
-    { "path": "../util" }
-  ],
-  "include": ["src"]
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {
+        "outDir": "dist",
+        "rootDir": "src",
+        "composite": true
+    },
+    "references": [{ "path": "../link" }, { "path": "../util" }],
+    "include": ["src"]
 }
