--- a/packages/link/tsconfig.json
+++ b/packages/link/tsconfig.json
@@ -1,12 +1,10 @@
 {
-  "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "outDir": "dist",
-    "rootDir": "src",
-    "composite": true
-  },
-  "include": ["src"],
-  "references": [
-    { "path": "../util" }
-  ]
+    "extends": "../../tsconfig.base.json",
+    "compilerOptions": {
+        "outDir": "dist",
+        "rootDir": "src",
+        "composite": true
+    },
+    "include": ["src"],
+    "references": [{ "path": "../util" }]
 }
