--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@jaculus/code",
+    "name": "@jaculus/project",
     "version": "0.0.1",
     "type": "module",
     "private": false,
