--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,28 +1,28 @@
 {
-    "name": "@jaculus/commands",
-    "version": "0.0.1",
+    "name": "jaculus-tools",
+    "version": "0.0.26",
+    "description": "Companion CLI for Jaculus",
+    "license": "GPL-3.0-only",
     "type": "module",
     "private": false,
-    "files": [
-        "dist"
-    ],
-    "main": "dist/src/index.js",
-    "types": "dist/src/index.d.ts",
-    "exports": {
-        ".": "./dist/src/index.js",
-        "./lib/command.js": "./dist/src/lib/command.js",
-        "./util.js": "./dist/src/util.js"
+    "bin": {
+        "jac": "dist/src/cli.js"
     },
+    "main": "dist/src/cli.js",
+    "module": "dist/src/cli.js",
+    "types": "dist/src/cli.d.ts",
     "scripts": {
+        "prebuild": "node -p \"'export const version = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/meta/version.ts",
         "build": "tsc -b",
+        "dev": "tsc -b --watch",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
         "lint": "eslint --ext .ts src"
     },
     "dependencies": {
-        "@jaculus/code": "workspace:*",
         "@jaculus/device": "workspace:*",
         "@jaculus/link": "workspace:*",
         "@jaculus/package": "workspace:*",
+        "@jaculus/project": "workspace:*",
         "@jaculus/util": "workspace:*",
         "chalk": "^5.4.1",
         "cli-progress": "^3.12.0",
@@ -36,6 +36,8 @@
         "typescript": "^5.8.3",
         "@types/node": "^24.0.7",
         "@types/tar-stream": "^3.1.4",
-        "rimraf": "^6.0.1"
+        "eslint": "^9.30.0",
+        "rimraf": "^6.0.1",
+        "typescript-eslint": "^8.35.0"
     }
 }
