--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@jaculus/util",
+    "name": "@jaculus/common",
     "version": "0.0.1",
     "type": "module",
     "private": false,
