--- a/packages/device/package.json
+++ b/packages/device/package.json
@@ -15,7 +15,7 @@
     },
     "dependencies": {
         "@jaculus/link": "workspace:*",
-        "@jaculus/util": "workspace:*"
+        "@jaculus/common": "workspace:*"
     },
     "devDependencies": {
         "@types/node": "^24.0.7",
