--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -20,7 +20,7 @@
         "@jaculus/link": "workspace:*",
         "@jaculus/firmware": "workspace:*",
         "@jaculus/project": "workspace:*",
-        "@jaculus/util": "workspace:*",
+        "@jaculus/common": "workspace:*",
         "chalk": "^5.4.1",
         "cli-progress": "^3.12.0",
         "get-uri": "^6.0.4",
