fix eslint dependency

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "pnpm -r run build",
         "clean": "pnpm -r run clean",
+        "fullclean": "pnpm -r run fullclean && rimraf node_modules",
         "test": "vitest run",
         "lint": "pnpm -r run lint && eslint --ext .ts ./unit",
         "lint:fix": "eslint . --fix",
@@ -19,12 +20,14 @@
         "@types/chai": "^4.3.20",
         "chai": "^5.1.2",
         "chai-bytes": "^0.1.2",
+        "eslint": "^9.35.0",
         "eslint-config-prettier": "^10.1.8",
         "husky": "^9.1.7",
         "jiti": "^2.5.1",
         "lint-staged": "^16.1.5",
         "prettier": "^3.6.2",
         "queue-fifo": "^0.2.5",
+        "rimraf": "^6.0.1",
         "vitest": "^3.2.4"
     }
 }
