--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,11 +19,12 @@
     "scripts": {
         "build": "tsc -b",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
+        "fullclean": "npm run clean && rimraf node_modules",
         "lint": "eslint --ext .ts src"
     },
-    "dependencies": {},
     "devDependencies": {
-        "typescript": "^5.8.3",
-        "rimraf": "^6.0.1"
+        "eslint": "^9.35.0",
+        "rimraf": "^6.0.1",
+        "typescript": "^5.8.3"
     }
 }
