--- a/packages/device/package.json
+++ b/packages/device/package.json
@@ -19,14 +19,16 @@
     "scripts": {
         "build": "tsc -b",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
-        "lint": "eslint --ext .ts src"
+        "lint": "eslint --ext .ts src",
+        "fullclean": "npm run clean && rimraf node_modules"
     },
     "dependencies": {
-        "@jaculus/link": "workspace:*",
-        "@jaculus/common": "workspace:*"
+        "@jaculus/common": "workspace:*",
+        "@jaculus/link": "workspace:*"
     },
     "devDependencies": {
         "@types/node": "^24.0.7",
+        "eslint": "^9.35.0",
         "rimraf": "^6.0.1",
         "typescript": "^5.8.3"
     }
