--- a/packages/firmware/package.json
+++ b/packages/firmware/package.json
@@ -19,7 +19,8 @@
     "scripts": {
         "build": "tsc -b",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
-        "lint": "eslint --ext .ts src"
+        "lint": "eslint --ext .ts src",
+        "fullclean": "npm run clean && rimraf node_modules"
     },
     "dependencies": {
         "@cubicap/esptool-js": "^0.3.2",
@@ -34,6 +35,7 @@
         "@types/cli-progress": "^3.11.6",
         "@types/node": "^24.0.7",
         "@types/tar-stream": "^3.1.4",
+        "eslint": "^9.35.0",
         "rimraf": "^6.0.1",
         "typescript": "^5.8.3"
     }
