--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -21,13 +21,15 @@
     "scripts": {
         "build": "tsc -b",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
-        "lint": "eslint --ext .ts src"
+        "lint": "eslint --ext .ts src",
+        "fullclean": "npm run clean && rimraf node_modules"
     },
     "dependencies": {
         "@jaculus/common": "workspace:*",
         "typescript": "^5.8.3"
     },
     "devDependencies": {
+        "eslint": "^9.35.0",
         "rimraf": "^6.0.1"
     }
 }
