--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "build": "pnpm -r run build",
         "clean": "pnpm -r run clean",
         "fullclean": "pnpm -r run fullclean && rimraf node_modules",
-        "test": "vitest run",
-        "lint": "pnpm -r run lint && eslint --ext .ts ./unit",
+        "test": "mocha",
+        "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
@@ -17,7 +17,10 @@
         "prepare": "husky"
     },
     "devDependencies": {
+        "@jaculus/link": "workspace:*",
         "@types/chai": "^4.3.20",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^24.0.7",
         "chai": "^5.1.2",
         "chai-bytes": "^0.1.2",
         "eslint": "^9.35.0",
@@ -25,9 +28,11 @@
         "husky": "^9.1.7",
         "jiti": "^2.5.1",
         "lint-staged": "^16.1.5",
+        "mocha": "^11.7.2",
         "prettier": "^3.6.2",
         "queue-fifo": "^0.2.5",
         "rimraf": "^6.0.1",
-        "vitest": "^3.2.4"
+        "tsx": "^4.20.5",
+        "typescript-eslint": "^8.43.0"
     }
 }
