--- a/packages/firmware/package.json
+++ b/packages/firmware/package.json
@@ -26,13 +26,14 @@
         "@jaculus/common": "workspace:*",
         "cli-progress": "^3.12.0",
         "get-uri": "^6.0.4",
+        "pako": "^2.1.0",
         "serialport": "^13.0.0",
-        "tar-stream": "^3.1.7",
-        "zlib": "^1.0.5"
+        "tar-stream": "^3.1.7"
     },
     "devDependencies": {
         "@types/cli-progress": "^3.11.6",
         "@types/node": "^24.0.7",
+        "@types/pako": "^2.0.4",
         "@types/tar-stream": "^3.1.4",
         "rimraf": "^6.0.1",
         "typescript": "^5.8.3"
