--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -33,13 +33,14 @@
         "@jaculus/project": "workspace:*",
         "chalk": "^5.4.1",
         "get-uri": "^6.0.4",
+        "pako": "^2.1.0",
         "serialport": "^13.0.0",
         "tar-stream": "^3.1.7",
-        "winston": "^3.17.0",
-        "zlib": "^1.0.5"
+        "winston": "^3.17.0"
     },
     "devDependencies": {
         "@types/node": "^24.0.7",
+        "@types/pako": "^2.0.4",
         "@types/tar-stream": "^3.1.4",
         "rimraf": "^6.0.1",
         "typescript": "^5.8.3"
