--- a/packages/device/package.json
+++ b/packages/device/package.json
@@ -18,6 +18,7 @@
     ],
     "scripts": {
         "build": "tsc -b",
+        "build:watch": "tsc -b --watch",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
         "fullclean": "npm run clean && rimraf node_modules"
     },
