--- a/packages/link/package.json
+++ b/packages/link/package.json
@@ -24,6 +24,7 @@
     ],
     "scripts": {
         "build": "tsc -b",
+        "build:watch": "tsc -b --watch",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
         "fullclean": "npm run clean && rimraf node_modules"
     },
