--- a/packages/project/package.json
+++ b/packages/project/package.json
@@ -26,12 +26,14 @@
     ],
     "scripts": {
         "build": "tsc -b",
+        "build:watch": "tsc -b --watch",
         "clean": "rimraf dist tsconfig.tsbuildinfo",
         "fullclean": "npm run clean && rimraf node_modules"
     },
     "dependencies": {
         "@jaculus/common": "workspace:*",
         "@jaculus/device": "workspace:*",
+        "@obsidize/tar-browserify": "^6.1.0",
         "buffer": "^6.0.3",
         "pako": "^2.1.0",
         "tar-stream": "^3.1.7",
